PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/RemoveConditionalExpressionCoCo.par
RemoveConditionalExpressionCoCo {
var Int test = 0
seq main() : Void {
    true ? test++ : test--
}
}